# artifacts/api-server/src/routes/index.ts
@@ -4,6 +4,7 @@ import novelsRouter from "./novels";
 import charactersRouter from "./characters";
 import charactersListRouter from "./characters-list";
 import eventsRouter from "./events";
+import locationsRouter from "./locations";
 
 const router: IRouter = Router();
 
@@ -12,5 +13,6 @@ router.use(novelsRouter);
 router.use(charactersRouter);
 router.use(charactersListRouter);
 router.use(eventsRouter);
+router.use(locationsRouter);
 
 export default router;
